--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,10 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+DEBUGBAR_OPEN_STORAGE=true
+DEBUGBAR_ENABLED=true
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
